--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -1050,6 +1050,14 @@ footer {
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.swiper-wrapper {
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 #contacts {
@@ -1462,10 +1470,6 @@ footer {
   }
   #certificate {
     padding-right: 0;
-  }
-  .certificate__card {
-    width: 300px;
-    height: 440px;
   }
   .burger {
     display: block;
