--- a/resources/src/assets/scss/sections/certificate.scss
+++ b/resources/src/assets/scss/sections/certificate.scss
@@ -30,9 +30,11 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 
-  @media (max-width: $px768) {
-    width: 300px;
-    height: 440px;
-  }
+.swiper-wrapper {
+  margin: 0 auto;
+  overflow: hidden;
 }
