--- a/resources/src/assets/scss/UI/nav.scss
+++ b/resources/src/assets/scss/UI/nav.scss
@@ -14,7 +14,7 @@
   max-height: 200px;
   background-color: #00110A;
 
-  @media (max-width: $px768) {
+  @media (max-width: $px850) {
     max-height: 0;
     min-height: 0;
     overflow: hidden;
@@ -26,6 +26,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 
     &.mobile-nav-active {
       min-height: 100vh;
