--- a/resources/src/assets/scss/sections/hero.scss
+++ b/resources/src/assets/scss/sections/hero.scss
@@ -109,4 +109,10 @@
 .hero-dot3 {
   left: 11.5vw;
   top: 0vh;
+  @media (max-width: 1450px) {
+    left: 4%;
+  }
+  @media (max-width: 1320px) {
+    display: none;
+  }
 }
