--- a/resources/src/assets/scss/components/burger.scss
+++ b/resources/src/assets/scss/components/burger.scss
@@ -3,7 +3,12 @@
 .burger {
     display: none;
     cursor: pointer;
-    background-color: #00110A;
+    background-color: rgba(0,0,0,0);
+    position: fixed;
+    top: 15px;
+    right: 20px;
+    z-index: 4;
+    
 
     @media (max-width: $px850) {
         display: block;
