--- a/resources/src/assets/scss/components/popup.scss
+++ b/resources/src/assets/scss/components/popup.scss
@@ -7,8 +7,8 @@
   overflow: hidden;
   top: 0;
   left: 0;
+  z-index: 999;
 }
-
 
 .popup__content {
   background-color: white;
@@ -27,14 +27,26 @@
   justify-content: center;
   padding: 70px;
   text-align: center;
+    @media (max-width: $px480) {
+      padding: 10px;
+    }
 
   h2 {
     margin-bottom: 40px;
+
+    @media (max-width: 580px) {
+      font-size: 36px;
+      line-height: 0.9;
+      margin-bottom: 22px;
+    }
   }
 
   p {
     margin-bottom: 30px;
 
+    @media (max-width: 580px) {
+      font-size: 14px;
+    }
   }
 
   form {
@@ -43,10 +55,13 @@
     align-items: center;
     justify-content: center;
     gap: 30px;
+    width: 100%;
 
     input,
     button {
-      width: 350px;
+      max-width: 350px;
+      width: 100%;
+      // display: block;
     }
 
     input {
