social icons transition added

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -1135,6 +1135,10 @@ footer {
   margin-top: 40px;
   transition: all 0.2s;
 }
+.icons-container img {
+  transition: all 0.2s;
+  transform: scale(1);
+}
 .icons-container img:hover {
   transform: scale(1.05);
 }
