--- a/resources/src/assets/scss/layouts/header.scss
+++ b/resources/src/assets/scss/layouts/header.scss
@@ -44,8 +44,14 @@
   }
 }
 
+.header__logo-fixed {
+  position: fixed;
+  top: 10px;
+  left: 30px;
+}
+
 .header__phone {
-  transition: all 0.2s;
+  // transition: all 0.2s;
   font-style: normal;
   font-weight: 800;
   font-size: 24px;
