--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -768,6 +768,8 @@ footer {
 .hero__image {
   flex: 1;
   max-width: 550px;
+  display: flex;
+  align-items: center;
 }
 .hero__image img {
   position: relative;
@@ -1028,6 +1030,8 @@ footer {
   flex: 1;
   margin-top: 25px;
   max-width: 630px;
+  display: flex;
+  align-items: center;
 }
 .about__image img {
   position: relative;
@@ -1073,6 +1077,11 @@ footer {
 
 .swiper-wrapper {
   margin: 0 auto;
+}
+
+.mySwiper {
+  width: 100%;
+  height: 440px;
 }
 
 #contacts {
@@ -1288,6 +1297,12 @@ footer {
 @media (max-width: 1320px){
   .hero-dot3 {
     display: none;
+  }
+}
+
+@media (max-width: 1160px){
+  .contacts__map {
+    width: 600px;
   }
 }
 
