--- a/resources/src/assets/scss/sections/about.scss
+++ b/resources/src/assets/scss/sections/about.scss
@@ -68,6 +68,8 @@
   flex: 1;
   margin-top: 25px;
   max-width: 630px;
+  display: flex;
+  align-items: center;
 
   @media (max-width: $px1024) {
     height: 406px;
