--- a/resources/src/assets/scss/sections/contacts.scss
+++ b/resources/src/assets/scss/sections/contacts.scss
@@ -102,11 +102,11 @@
   align-items: center;
   margin-top: 40px;
   transition: all 0.2s;
-  
+
   @media (max-width: $px480) {
     justify-content: center;
   }
-  
+
   img {
     transition: all 0.2s;
     transform: scale(1);
@@ -122,13 +122,15 @@
   position: relative;
   width: 100%;
 
+  @media (max-width: 1160px) {
+    width: 600px;
+  }
+
   @media (max-width: $px1024) {
     max-width: unset;
     width: 100%;
     height: 500px;
   }
-
-
 }
 
 .contacts-dot1 {
@@ -143,4 +145,5 @@
   border-radius: 8px;
   overflow: hidden;
   margin-top: 30px;
+
 }
