--- a/resources/src/assets/scss/components/_index.scss
+++ b/resources/src/assets/scss/components/_index.scss
@@ -2,6 +2,6 @@
 // @import "./swiper/index";
 @import "burger";
 // @import "modalForm";
-// @import "animated";
+@import "animated";
 @import "mobile-menu";
 @import "popup";
