--- a/resources/src/assets/scss/layouts/footer.scss
+++ b/resources/src/assets/scss/layouts/footer.scss
@@ -28,6 +28,14 @@ footer {
         font-weight: 400;
         font-size: 15px;
         line-height: 140%;
+
+        a {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 15px;
+            line-height: 140%;
+        }
     }
 }
 
