--- a/resources/src/assets/scss/sections/about.scss
+++ b/resources/src/assets/scss/sections/about.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   min-height: unset;
+ 
 
   @media (max-width: $px768) {
     justify-content: flex-start;
@@ -31,6 +32,7 @@
 }
 
 .about__content {
+  margin-top: 25px;
   display: flex;
   justify-content: center;
   max-width: 1290px;
@@ -38,6 +40,7 @@
 
   @media (max-width: $px1024) {
     margin-top: 70px;
+    // height: 406px;
   }
 
   @media (max-width: $px768) {
@@ -48,12 +51,8 @@
 
 .about__text {
   max-width: 630px;
-  margin-top: 45px;
-  flex: 1;
-
-  @media (max-width: $px1024) {
-    margin-top: 30px;
-  }
+  margin: auto 0;
+  flex: 1;  
 
   @media (max-width: $px768) {
     max-width: unset;
@@ -62,48 +61,44 @@
 
 .about__image {
   flex: 1;
-  margin-top: 25px;
   max-width: 630px;
   display: flex;
   align-items: center;
 
-  @media (max-width: $px1024) {
-    height: 406px;
 
-  }
 
   @media (max-width: $px768) {
     max-width: unset;
     margin-top: unset;
-    height: 500px;
+    // height: 500px;
   }
 
 
   img {
     position: relative;
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 8px;
     object-position: 0 0;
+    object-fit: cover;
 
     @media (max-width: $px1024) {
       object-fit: cover;
-      height: 406px;
     }
 
-    @media (max-width: $px768) {
-      height: 500px;
-    }
+    // @media (max-width: $px768) {
+    //   height: 500px;
+    // }
 
-    @media (max-width: $px480) {
-      height: 400px;
-      object-position: 40% 0%;
-    }
+    // @media (max-width: $px480) {
+    //   height: 400px;
+    //   object-position: 40% 0%;
+    // }
 
-    @media (max-width: $px360) {
-      height: 300px;
-      object-position: 40% 0%;
-    }
+    // @media (max-width: $px360) {
+    //   height: 300px;
+    //   object-position: 40% 0%;
+    // }
   }
 }
 
