--- a/resources/src/assets/scss/layouts/section.scss
+++ b/resources/src/assets/scss/layouts/section.scss
@@ -1,5 +1,5 @@
 .section {
-  // outline: 1px solid red;
+  outline: 1px solid red;
   min-height: 500px;
   position: relative;
   padding: 0 30px;
