--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -734,7 +734,6 @@ footer {
 
 .section {
   outline: 1px solid red;
-  min-height: 500px;
   position: relative;
   padding: 0 30px;
 }
@@ -1057,10 +1056,6 @@ footer {
   left: -0.2vw;
   opacity: 0.8;
 }
-
-#certificate {
-  padding-bottom: 45px;
-}
 #certificate h2 {
   margin-bottom: 40px;
 }
@@ -1091,13 +1086,12 @@ footer {
 
 .mySwiper {
   width: 100%;
-  height: 440px;
+  outline: 1px solid red;
 }
 
 #contacts {
   display: flex;
   position: relative;
-  padding-top: 45px;
   padding-bottom: 50px;
   justify-content: center;
   width: 100%;
@@ -1115,11 +1109,14 @@ footer {
   display: flex;
   max-width: 1290px;
   gap: 30px;
+  margin-top: 90px;
   width: 100%;
 }
 
+.contacts__text {
+  margin: auto 0;
+}
 .contacts__text h2 {
-  margin-top: 40px;
   margin-bottom: 40px;
 }
 
