--- a/resources/src/assets/scss/sections/certificate.scss
+++ b/resources/src/assets/scss/sections/certificate.scss
@@ -1,5 +1,4 @@
 #certificate {
-  padding-bottom: 45px;
 
   @media (max-width: $px768) {
     padding-right: 0;
@@ -41,5 +40,6 @@
 
 .mySwiper {
   width: 100%;
-  height: 440px;
+  // height: 440px;
+  outline: 1px solid red;
 }
