--- a/resources/src/assets/scss/sections/advantages.scss
+++ b/resources/src/assets/scss/sections/advantages.scss
@@ -44,13 +44,13 @@
     flex-direction: row;
     max-width: unset;
     width: 100%;
+    align-items: center;
   }
 
   @media (max-width: $px480) {
     flex-direction: column;
     max-width: unset;
     width: 100%;
-    // justify-content: center;
     align-items: center;
     text-align: center;
     margin-right: 0;
