--- a/resources/src/assets/scss/sections/advantages.scss
+++ b/resources/src/assets/scss/sections/advantages.scss
@@ -12,7 +12,8 @@
   max-width: 1290px;
   position: relative;
   left: -20px;
-
+  margin-top: 100px;
+  
   @media (max-width: $px1024) {
     left: 0;
   }
