--- a/resources/src/assets/scss/sections/hero.scss
+++ b/resources/src/assets/scss/sections/hero.scss
@@ -18,9 +18,8 @@
   display: flex;
   justify-content: center;
   gap: 101px;
-  padding-top: 80px;
-  padding-bottom: 100px;
   position: relative;
+  margin-top: 80px;
 
   @media (max-width: $px1024) {
     gap: 20px;
@@ -41,11 +40,9 @@
   max-width: 639px;
 
   @media (max-width: $px1024) {
-    margin-top: 93px;
   }
 
   @media (max-width: $px768) {
-    margin-top: 30px;
     max-width: unset;
   }
 
@@ -75,25 +72,25 @@
   display: flex;
   align-items: center;
 
+  @media (max-width: $px1024) {
+    min-height: 500px;
+  }
   @media (max-width: $px768) {
     width: 100%;
     max-width: unset;
   }
 
+  @media (max-width: $px360) {
+    min-height: 400px;
+  }
+
   img {
     position: relative;
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 8px;
+    object-fit: cover;
 
-    @media (max-width: $px1024) {
-      height: 500px;
-      object-fit: cover;
-    }
-
-    @media (max-width: $px360) {
-      height: 400px;
-    }
   }
 }
 
